[package]
name = "lts"
description = "Workaround for old Rust compiler versions. Makes Cargo see only old dependency versions, which should be compatible with old compiler versions."
version = "0.2.0"
authors = ["Kornel <kornel@geekhood.net>"]
license = "CC0-1.0"
readme = "README.md"
keywords = ["long-term-support", "LTS", "crates-io", "index", "back-compat"]
categories = ["development-tools::cargo-plugins", "config"]
homepage = "https://lib.rs/lts"
repository = "https://gitlab.com/kornelski/LTS"

[[bin]]
name = "cargo-lts"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
