[package]
name = "lts"
version = "0.1.0"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "0.11.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
