[package]
name = "lts"
version = "0.3.0"
description = "Yank other people's crates. Helpful for using old compilers and avoiding broken deps"
authors = ["Kornel <kornel@geekhood.net>"]
categories = ["development-tools::cargo-plugins"]
homepage = "https://lib.rs/crates/lts"
repository = "https://gitlab.com/kornelski/LTS"
keywords = ["long-term-support", "yank", "registry", "dependencies", "back-compat"]
license = "Apache-2.0 OR MIT"
readme = "README.md"

[[bin]]
name = "cargo-lts"
path = "src/main.rs"

[dependencies]
semver = "0.9"
serde = "=1.0.118"
serde_derive = "=1.0.98"
serde_json = "=1.0.44"
ryu = "=1.0.4"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
